Unit test instruction serialization

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_executable(tests tests.cpp)
-target_link_libraries(tests gtest_main cpu)
-
-add_test(NAME tests COMMAND $<TARGET_FILE:tests>)
+add_subdirectory(cpu)
