Refactor assembler logic for easier testing

--- a/src/assembler/CMakeLists.txt
+++ b/src/assembler/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(assembler 
+    assembler.h
+    assembler.cpp
     tokenizer.h 
     tokenizer.cpp 
     define_table.h 
@@ -14,6 +16,6 @@ add_library(assembler
 target_link_libraries(assembler cpu)
 target_include_directories(assembler INTERFACE ..)
 
-add_executable(assembler_exe assembler.cpp)
+add_executable(assembler_exe main.cpp)
 target_link_libraries(assembler_exe assembler) 
 set_property(TARGET assembler_exe PROPERTY OUTPUT_NAME assembler)
