Move state to shared cpu library

--- a/src/cpu/CMakeLists.txt
+++ b/src/cpu/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(
     cpu.cpp 
     cpu.h 
     instruction_serializer.cpp 
-    instruction_serializer.h)
+    instruction_serializer.h
+    state.cpp
+    state.h)
 
 target_include_directories(cpu INTERFACE ..)
