--- a/test/cpu/CMakeLists.txt
+++ b/test/cpu/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(cpu_tests instruction_serializer.cpp)
-target_link_libraries(cpu_tests cpu gtest_main)
-add_test(NAME cpu_tests COMMAND $<TARGET_FILE:cpu_tests>)
+target_link_libraries(cpu_tests cpu gtest gtest_main)
+gtest_discover_tests(cpu_tests)
