Use verbose ctest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
 
     - name: Test
       working-directory: ./build
-      run: ctest -C Release
+      run: ctest -C Release --output-on-failure
